log
Sat Mar 12 17:29:20 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
   82 |         sprintf(msg,"%.50s %d,",msg,a[i]);
      |                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
   84 |     sprintf(msg,"%.50s]",msg);
      |             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
58471fd
